--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
 			<version>3.2.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.webjars.npm</groupId>
+			<groupId>org.webjars</groupId>
 			<artifactId>tether</artifactId>
 			<version>1.4.0</version>
 		</dependency>
