DAO Authorization added

--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,16 @@
 			<artifactId>bootstrap</artifactId>
 			<version>4.0.0-beta</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.jasypt</groupId>
+			<artifactId>jasypt</artifactId>
+			<version>1.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jasypt</groupId>
+			<artifactId>jasypt-springsecurity3</artifactId>
+			<version>1.9.2</version>
+		</dependency>
 
 
 	</dependencies>
